--- a/index.html
+++ b/index.html
@@ -646,6 +646,102 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4 col-lg-8">
+            <section class="product-section product-user-gallery">
+              <header class="product-section-header">
+                <h1 class="title">유저들의 스타일링샷</h1>
+                <strong class="badge" aria-label="461개">461</strong>
+                <a class="icon-button is-right" href="/" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden></i>
+                </a>
+              </header>
+
+              <div class="product-section-content">
+                <ol>
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/image/img-review-01.jpg" alt="" />
+                        <figcaption class="sr-only">
+                          김버그 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+                      <div class="gallery-card-detail">
+                        <a href="/" class="avatar-32">
+                          <img
+                            src="./assets/image/img-user-01.jpg"
+                            alt="사달러아저씨"
+                          />
+                        </a>
+                        <a class="username" href="/">
+                          김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그
+                        </a>
+                        <span class="order">1/461</span>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/image/img-review-02.jpg" alt="" />
+                        <figcaption class="sr-only">
+                          가래떡 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+                      <div class="gallery-card-detail">
+                        <a href="/" class="avatar-32">
+                          <img
+                            src="./assets/image/img-user-01.jpg"
+                            alt="사달러아저씨"
+                          />
+                        </a>
+                        <a class="username" href="/"> 가래떡 </a>
+                        <span class="order">2/461</span>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/image/img-review-03.jpg" alt="" />
+                        <figcaption class="sr-only">
+                          홍시 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+                      <div class="gallery-card-detail">
+                        <a href="/" class="avatar-32">
+                          <img
+                            src="./assets/image/img-user-01.jpg"
+                            alt="사달러아저씨"
+                          />
+                        </a>
+                        <a class="username" href="/"> 홍시 </a>
+                        <span class="order">3/461</span>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="gallery-card">
+                      <figure class="gallery-card-image">
+                        <img src="./assets/image/img-review-04.jpg" alt="" />
+                        <figcaption class="sr-only">
+                          구름 님의 스타일링샷
+                        </figcaption>
+                      </figure>
+                      <div class="gallery-card-detail">
+                        <a href="/" class="avatar-32">
+                          <img
+                            src="./assets/image/img-user-01.jpg"
+                            alt="사달러아저씨"
+                          />
+                        </a>
+                        <a class="username" href="/"> 구름 </a>
+                        <span class="order">4/461</span>
+                      </div>
+                    </div>
+                  </li>
+                </ol>
+              </div>
+            </section>
             <section
               class="product-section product-spec is-open"
               id="product-spec"
