--- a/index.html
+++ b/index.html
@@ -656,90 +656,107 @@
               </header>
 
               <div class="product-section-content">
-                <ol>
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/image/img-review-01.jpg" alt="" />
-                        <figcaption class="sr-only">
-                          김버그 님의 스타일링샷
-                        </figcaption>
-                      </figure>
-                      <div class="gallery-card-detail">
-                        <a href="/" class="avatar-32">
-                          <img
-                            src="./assets/image/img-user-01.jpg"
-                            alt="사달러아저씨"
-                          />
-                        </a>
-                        <a class="username" href="/">
-                          김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그
-                        </a>
-                        <span class="order">1/461</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/image/img-review-02.jpg" alt="" />
-                        <figcaption class="sr-only">
-                          가래떡 님의 스타일링샷
-                        </figcaption>
-                      </figure>
-                      <div class="gallery-card-detail">
-                        <a href="/" class="avatar-32">
-                          <img
-                            src="./assets/image/img-user-01.jpg"
-                            alt="사달러아저씨"
-                          />
-                        </a>
-                        <a class="username" href="/"> 가래떡 </a>
-                        <span class="order">2/461</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/image/img-review-03.jpg" alt="" />
-                        <figcaption class="sr-only">
-                          홍시 님의 스타일링샷
-                        </figcaption>
-                      </figure>
-                      <div class="gallery-card-detail">
-                        <a href="/" class="avatar-32">
-                          <img
-                            src="./assets/image/img-user-01.jpg"
-                            alt="사달러아저씨"
-                          />
-                        </a>
-                        <a class="username" href="/"> 홍시 </a>
-                        <span class="order">3/461</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="gallery-card">
-                      <figure class="gallery-card-image">
-                        <img src="./assets/image/img-review-04.jpg" alt="" />
-                        <figcaption class="sr-only">
-                          구름 님의 스타일링샷
-                        </figcaption>
-                      </figure>
-                      <div class="gallery-card-detail">
-                        <a href="/" class="avatar-32">
-                          <img
-                            src="./assets/image/img-user-01.jpg"
-                            alt="사달러아저씨"
-                          />
-                        </a>
-                        <a class="username" href="/"> 구름 </a>
-                        <span class="order">4/461</span>
-                      </div>
-                    </div>
-                  </li>
-                </ol>
+                <div class="user-gallery" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              김버그 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/">
+                              김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그
+                            </a>
+                            <span class="order">1/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              가래떡 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 가래떡 </a>
+                            <span class="order">2/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              홍시 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 홍시 </a>
+                            <span class="order">3/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              구름 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 구름 </a>
+                            <span class="order">4/461</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+                  <div class="user-gallery-thumnail"></div>
+                </div>
               </div>
             </section>
             <section
