--- a/index.html
+++ b/index.html
@@ -590,6 +590,209 @@
             </form>
           </div>
         </div>
+
+        <div class="row sm-only">
+          <div class="col-sm-4">
+            <section class="product-section product-user-gallery">
+              <header class="product-section-header">
+                <h1 class="title">유저들의 스타일링샷</h1>
+                <strong class="badge" aria-label="461개">461</strong>
+                <a class="icon-button is-right" href="/" aria-label="더보기">
+                  <i class="ic-chevron" aria-hidden></i>
+                </a>
+              </header>
+
+              <div class="product-section-content">
+                <div class="user-gallery is-mobile" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              김버그 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/">
+                              김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그김버그
+                            </a>
+                            <span class="order">1/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              가래떡 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 가래떡 </a>
+                            <span class="order">2/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              홍시 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 홍시 </a>
+                            <span class="order">3/461</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/image/img-review-04.jpg"
+                              alt=""
+                            />
+                            <figcaption class="sr-only">
+                              구름 님의 스타일링샷
+                            </figcaption>
+                          </figure>
+                          <div class="gallery-card-detail">
+                            <a href="/" class="avatar-32">
+                              <img
+                                src="./assets/image/img-user-01.jpg"
+                                alt="사달러아저씨"
+                              />
+                            </a>
+                            <a class="username" href="/"> 구름 </a>
+                            <span class="order">4/461</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                    <div class="user-gallery-controls sm-hidden">
+                      <button
+                        type="button"
+                        class="control-button is-prev"
+                        aria-label="이전 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                      <button
+                        type="button"
+                        class="control-button is-next"
+                        aria-label="다음 이미지"
+                      >
+                        <i class="ic-chevron" aria-hidden></i>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="user-gallery-thumnail">
+                    <ol class="thumbnail-list" role="tablist">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-1"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-01.jpg"
+                            alt="1번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-2"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-02.jpg"
+                            alt="2번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-3"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-03.jpg"
+                            alt="3번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-4"
+                        role="tab"
+                      >
+                        <button type="button">
+                          <img
+                            src="./assets/image/img-review-04.jpg"
+                            alt="4번 스타일링샷"
+                          />
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="product-section-divider sm-only" aria-hidden></div>
       </div>
 
       <div class="product-tab">
@@ -647,7 +850,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4 col-lg-8">
-            <section class="product-section product-user-gallery">
+            <section class="product-section product-user-gallery sm-hidden">
               <header class="product-section-header">
                 <h1 class="title">유저들의 스타일링샷</h1>
                 <strong class="badge" aria-label="461개">461</strong>
@@ -657,7 +860,7 @@
               </header>
 
               <div class="product-section-content">
-                <div class="user-gallery" role="region">
+                <div class="user-gallery is-desk" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
                       <li
