--- a/index.html
+++ b/index.html
@@ -2040,6 +2040,139 @@
             </section>
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
+
+          <div class="col-lg-4 lg-only">
+            <form
+              class="floating-order-form order-form"
+              action="/"
+              method="POST"
+            >
+              <div class="order-inputs">
+                <div class="select-group is-active">
+                  <select
+                    class="form-select"
+                    id="floating-order-form-select-1"
+                    required
+                  >
+                    <option>선택</option>
+                    <option value="1">
+                      선택 사항1 선택 사항1선택 사항1선택 사항1선택 사항1선택
+                      사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
+                      사항1선택 사항1선택 사항1선택 사항1
+                    </option>
+                    <option value="2">선택 사항2</option>
+                    <option value="3">선택 사항3</option>
+                    <option value="4">선택 사항4</option>
+                    <option value="5">선택 사항5</option>
+                  </select>
+                  <i class="ic-caret" aria-hidden></i>
+                </div>
+
+                <div class="select-group">
+                  <select class="form-select" id="floating-order-form-select-2">
+                    <option>추가상품 (선택)</option>
+                    <option value="1">
+                      선택 사항1 선택 사항1선택 사항1선택 사항1선택 사항1선택
+                      사항1선택 사항1선택 사항1선택 사항1선택 사항1선택
+                      사항1선택 사항1선택 사항1선택 사항1
+                    </option>
+                    <option value="2">선택 사항2</option>
+                    <option value="3">선택 사항3</option>
+                    <option value="4">선택 사항4</option>
+                    <option value="5">선택 사항5</option>
+                  </select>
+                  <i class="ic-caret" aria-hidden></i>
+                </div>
+              </div>
+
+              <div class="order-checkout">
+                <ul class="checkout-list">
+                  <li class="checkout-item">
+                    <div class="checkout-card">
+                      <header class="checkout-header">
+                        <h4 class="checkout-title">
+                          추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                          1위 믿고 구매하세요.
+                        </h4>
+
+                        <button
+                          class="delete-button"
+                          type="button"
+                          aria-label="해당 상품 삭제"
+                        >
+                          <i class="ic-close" aria-hidden></i>
+                        </button>
+                      </header>
+
+                      <footer class="checkout-footer">
+                        <div class="checkout-select">
+                          <select
+                            class="form-select"
+                            id="floating-order-form-checkout-item-1"
+                          >
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                          </select>
+                          <i class="ic-caret" aria-hidden></i>
+                        </div>
+
+                        <output
+                          class="checkout-output"
+                          for="floating-order-form-checkout-item-1"
+                        >
+                          <div class="price-16">
+                            <strong class="amount">40,000</strong>
+                            <span class="currency">원</span>
+                          </div>
+                        </output>
+                      </footer>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+
+              <dl class="order-summary">
+                <dt>주문금액</dt>
+                <dd>
+                  <output
+                    for="floating-order-form-select-1 floating-order-form-select-2"
+                    ><div class="price-20">
+                      <strong class="amount">0</strong>
+                      <span class="currency">원</span>
+                    </div></output
+                  >
+                </dd>
+              </dl>
+
+              <div class="button-group">
+                <!--북마크를 아직 하지 않은 경우-->
+                <button
+                  class="bookmark-button btn-55"
+                  type="button"
+                  aria-label="북마크에 추가"
+                >
+                  <i class="ic-bookmark" aria-hidden></i>
+                </button>
+                <!-- 북마크를 한 경우
+                  <button
+                    class="bookmark-button is-active btn-55"
+                    type="button"
+                    aria-label="북마크에 해제"
+                  >
+                  <i class="ic-bookmark-filled" aria-hidden></i>
+                </button> -->
+                <button class="btn-outlined btn-55" type="button">
+                  장바구니
+                </button>
+                <button class="btn-primary btn-55" type="submit">
+                  바로구매
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
 
